--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,16 +5,16 @@ body {
 
 header {
   width: 100%;
-  background: darkblue;
-  color: white;
+  color: #002663;
   font-size: 36px;
-  padding: 10px 10px 10px 30px; }
+  padding: 30px 40px 20px 80px;
+  background: #f1c140 url(Assets/Images/liberty_mutual_logo.png) no-repeat 10px 5px; }
 
 .container {
   background-color: #f1f1f1;
   box-sizing: border-box;
   padding: 0;
-  min-height: 94vh;
+  min-height: 90vh;
   width: 100vw;
   display: flex;
   flex-flow: column nowrap;
